# image-alignment

./: .gitignore  Cargo.toml  OPENCV_INTEGRATION.md  README.md  config.toml  run_dashboard.sh  setup_opencv_env.sh
datasets/annotations/test/: 10076_image1_resize_JPG.rf.9330e9ac190bbb927e72920039a13b88.xml  10109_image2_jpg.rf.b1d00c86d57f5f3e8731222de30d7070.xml  10113_image4_jpg.rf.6536c388d9f829cc2d615273a1856f15.xml  1015_image2_jpg.rf.356fa488f5bbc3f673c5a0429b6b8e0b.xml  (+2528 more)
datasets/documentation/: README.roboflow.txt
src/: lib.rs  main.rs
src/algorithms/: fast_orb.rs  mod.rs  opencv_akaze.rs  opencv_ecc.rs  opencv_orb.rs  opencv_sift.rs  opencv_template.rs  orb_improved.rs  orb_matching.rs  phase_correlation.rs  template_matching.rs
src/analysis/: benchmarks.rs  metrics.rs  mod.rs
src/augmentation/: base.rs  blur.rs  composite.rs  geometric.rs  lighting.rs  mod.rs  noise.rs
src/config/: manipulation.rs  mod.rs
src/dashboard/: data.rs  mod.rs  server.rs
src/dashboard/frontend/: app.js  index.html  (+3 more)
src/data/: loader.rs  mod.rs  patch_extractor.rs  transformer.rs
src/logging/: config.rs  dashboard.rs  formatters.rs  metrics.rs  mod.rs  rotation.rs  spans.rs
src/pipeline/: builder.rs  composite.rs  mod.rs  stage.rs  traits.rs  types.rs
src/utils/: image_conversion.rs  mod.rs  ransac.rs
src/visualization/: dashboard.rs  mod.rs  visual_tester.rs
tests/: fast_orb_tests.rs  integration_tests.rs  opencv_integration_tests.rs  opencv_orb_tests.rs  opencv_performance_tests.rs  opencv_template_tests.rs  orb_improved_tests.rs  template_matching_tests.rs
(+1999 files in other folders)
