[package]
name = "image-alignment"
version = "0.1.0"
edition = "2021"
description = "Real-time unsupervised semiconductor wafer image alignment system"
authors = ["Developer"]

[dependencies]
# opencv = "0.91"  # Temporarily disabled due to system dependencies
image = "0.25"
ndarray = "0.16"
rustfft = "6.2"
num-complex = "0.4"
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
instant = "0.1"
rand = "0.8"

[[bin]]
name = "align"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"